# production-site

./: .dockerignore  .gitignore  .gitmodules  .yamllint.yaml  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  clickhouse_deploy.yaml  cliff.toml  docker-compose.yml  full.sh  implementation_plan.md  quick.sh  resource_audit.csv  sonar-project.properties  temp_coroot_values.yaml
7. application/rs-back-end/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile
7. application/rs-back-end/k8s/minikube/: my-site-rs-back-end.yaml
7. application/rs-back-end/src/: context.rs  convert_parquet_v0.rs  lib.rs  logger.rs  main.rs  middleware.rs  parquet_convert.rs  parquet_handler.rs
7. application/rs-back-end/zero/src/: main.rs
apps/agent-meter/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  RUNBOOK.md  agent-meter.example.toml  deploy.sh  docker-compose.postgres.yml  docker-compose.standalone.yml  docker-compose.yml  install.ps1  install.sh  sonar-project.properties
apps/agent-meter/charts/agent-meter/: Chart.yaml  values.yaml
apps/agent-meter/charts/agent-meter/templates/: deployment.yaml  service.yaml
apps/agent-meter/crates/cli/: Cargo.toml
apps/agent-meter/crates/cli/src/: main.rs
apps/agent-meter/crates/collector/: Cargo.toml
apps/agent-meter/crates/collector/src/: app.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  telemetry.rs
apps/agent-meter/crates/collector/tests/: api.rs  otlp_regression.rs
apps/agent-meter/crates/collector/ui/: 404.html  alerts.html  conversations.html  cost.html  dashboard.html  docs.html  leaderboard.html  login.html  pricing.html  privacy.html  quickstart.html  reports.html  settings.html  status.html  tasks.html  terms.html  timeline.html  vs.html
apps/agent-meter/crates/db/: Cargo.toml
apps/agent-meter/crates/db/src/: lib.rs  models.rs  params.rs  postgres.rs  sqlite.rs
apps/agent-meter/crates/mcp-wrapper/: Cargo.toml
apps/agent-meter/crates/mcp-wrapper/src/: main.rs  proxy.rs
apps/agent-meter/crates/proxy/: Cargo.toml
apps/agent-meter/cursor-proxy/: cursor-metered  cursor-proxy.service  cursor_interceptor.py  start_proxy.sh
apps/agent-meter/docs/: agent-meter-otel.md  agent-meter-wsl-vscode.md  capture-setup.md
apps/agent-meter/eclipse-proxy/: copilot-cli-metered.sh  copilot_interceptor.py  start_proxy.sh
apps/agent-meter/k8s/: agent-meter.yaml  mcp-wrapper.yaml
apps/agent-meter/migrations/: 20260517000001_init.sql  20260517000002_indexes.sql  20260517000003_enrich_tool_calls.sql  20260517000004_add_user_prompt.sql  20260523000005_report_perf_indexes.sql  20260603000006_cost_engine.sql  20260603000007_multitenant.sql  20260603000008_alerts_budgets.sql  20260603000009_auth_billing.sql  20260604000010_tool_payload.sql  20260604000011_deep_telemetry.sql  20260607000012_perf_indexes_and_pricing.sql  20260607100000_precompute_usd_cost.sql  20260607200000_ai_credits.sql  20260607300000_fix_billing_model_pricing.sql  20260609000001_rls_tenant_isolation.sql  20260610000001_fix_copilot_pricing_overcharge.sql  20260628000001_agent_meter_perf_indexes.sql  20260628000002_add_minimax_pricing.sql
apps/agent-meter/scripts/: setup-agent.sh  setup-https-proxy.sh  smoke-otel.sh  validate_all_agents.sh  validate_claude_code.sh  validate_codex_cli.sh  validate_copilot_eclipse.sh  validate_mcp_semconv.sh
apps/agent-meter/scripts/release/: package-linux.sh  package-macos.sh  package-windows-portable.ps1
apps/agent-meter/sdk/node/: README.md  package-lock.json  package.json
apps/agent-meter/sdk/python/: README.md  pyproject.toml
apps/ai-radar/: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  deploy.sh  docker-compose.yaml  justfile
apps/ai-radar/crates/ai-radar-api/: Cargo.toml
apps/ai-radar/crates/ai-radar-cli/: Cargo.toml
apps/ai-radar/crates/ai-radar-core/: Cargo.toml
apps/ai-radar/docker/: Dockerfile  Dockerfile.api  Dockerfile.cli
apps/ai-radar/k8s/base/: configmap-trends.yaml  configmap.yaml  deployment-api.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret-database-url.placeholder.yaml  service.yaml  serviceaccount.yaml
apps/ai-radar/migrations/: 0001_init.down.sql  0001_init.up.sql  0002_pipeline.down.sql  0002_pipeline.up.sql  0003_scores_history.down.sql  0003_scores_history.up.sql  0004_comparisons.down.sql  0004_comparisons.up.sql  0005_entity_resolution.down.sql  0005_entity_resolution.up.sql  0006_tool_metrics_snapshots.down.sql  0006_tool_metrics_snapshots.up.sql  0007_item_embeddings.down.sql  0007_item_embeddings.up.sql  0008_model_catalog.down.sql  0008_model_catalog.up.sql  0009_trend_signals.down.sql  0009_trend_signals.up.sql
apps/ai-radar/observability/: README.md  RUNBOOK.md
apps/ai-radar/observability/grafana/: ai-radar-pipeline.json
apps/ai-radar/observability/prometheus/: alerting-rules.example.yaml
apps/ai-radar/scripts/: benchmark-build.sh  drain-extract-backlog.sh  ensure-ai-rss-sources.sh  ensure-ai-tools-watchlist.sh  render-ai-radar-database-url.py  run-demo-pipeline.sh
apps/ai-radar/trends-collector/: Dockerfile  collect_trends.py  requirements.txt
apps/ai-radar/trends-collector/config/: trends-queries.yaml
apps/fleet-ops-gateway/: Cargo.toml
apps/fleet-ops-gateway/src/: main.rs
apps/rs-observability-api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  deploy.sh
apps/rs-observability-api/config/: external_nodes.json
apps/rs-observability-api/k8s/: rs-observability-api.yaml
apps/rs-observability-api/src/: app.rs  fleet_copilot.rs  main.rs
apps/rs-observability-api/web/: index.html
apps/rs-observability-api/web-v2/: index.html  package-lock.json  package.json  vite.config.ts
apps/rs-observability-api/web-v2/src/: OriginalMain.tsx  app.css  app.tsx  index.css  main.tsx  original_main.html  original_script.js
tools/citools/: Cargo.toml  README.md  deploy-catalog.yaml
tools/citools/scripts/: changelog-update.sh  codeql-scan.sh  deploy-run.sh  deploy-target-env.sh  github-status.sh  sonar-scan.sh
tools/citools/src/: deploy.rs  jenkins.rs  main.rs  paths.rs  pipeline.rs
(+1549 files in other folders)
