[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7.9"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
futures = "0.3"
http-body-util = "0.1"
indexmap = "2"
once_cell = "1.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros"] }
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.4"
uuid = { version = "1", features = ["v4"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["axum"] }
