[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arrow2 = { version = "0.17.0", features = ["io_json", "io_parquet"] }
axum = { version = "0.7.9", features = ["multipart"] }
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
futures = "0.3"
http-body = "1.0"
http-body-util = "0.1"
indexmap = "2"
multipart = "0.18.0"
once_cell = "1.19"
parquet2 = "0.17.2"
polars = { version = "0.46.0", features = ["parquet", "lazy", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros"] }
tempfile = "3.9"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
tower = "0.4"
uuid = { version = "1", features = ["v4"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["axum"] }
