[package]
name = "fleet-ops-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "process", "time"] }
tower-http = { version = "0.6.2", features = ["limit"] }
futures-util = "0.3.31"
tokio-stream = "0.1.17"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls", "stream"] }
