[package]
name = "rs-observability-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
reqwest = { version = "0.12.15", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }
futures-util = "0.3.31"
tokio-stream = "0.1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
base64 = "0.22"
tokio = { version = "1.44.2", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
sha2 = "0.10"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
