[package]
name = "rs-observability-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
reqwest = { version = "0.12.15", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
base64 = "0.22"
tokio = { version = "1.44.2", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "sync",
] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
