[package]
name = "citools"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CI stage runner agnostic to Jenkins/GHA — pipeline YAML → sequential execution"
readme = "README.md"

[[bin]]
name = "citools"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
