[package]
name = "agent-meter-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agent-meter"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
