[package]
name = "agent-meter-collector"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tower-http.workspace = true
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
sha2.workspace = true
hex.workspace = true
hmac.workspace = true
base64.workspace = true
reqwest.workspace = true
tokio-util.workspace = true
prost.workspace = true
toml = "0.8"
agent-meter-db = { path = "../db" }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
