[package]
name = "agent-meter-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait = "0.1"
