[package]
name = "agent-meter-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["postgres"]
postgres = []
sqlite = []

[dependencies]
sqlx = { version = "0.8", features = [
  "postgres",
  "sqlite",
  "runtime-tokio",
  "macros",
  "chrono",
  "uuid",
] }
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait = "0.1"
