[package]
name = "ai-radar-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AI Radar — HTTP API (Axum)"

[[bin]]
name = "ai-radar-api"
path = "src/main.rs"

[dependencies]
ai-radar-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
