[package]
name = "ai-radar-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AI Radar — CLI entrypoint for CronJobs (collect/extract/score/digest/...)"

[[bin]]
name = "ai-radar"
path = "src/main.rs"

[dependencies]
ai-radar-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
