[package]
name = "ai-radar-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AI Radar — domain, repositories, providers and pipelines"

[lib]
name = "ai_radar_core"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
figment = { workspace = true }
feed-rs = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
